moved to cross-platfor require

--- a/app/styles/common/taggedInput.styl
+++ b/app/styles/common/taggedInput.styl
@@ -13,17 +13,17 @@
     margin 0
     padding 0
     height auto
-    overflow hidden
 
     li
       float left
       margin-top 3px
 
       &.item-li
+        margin-left -6px
         background $brand-success
         color #fff
         line-height 23px
-        margin-right 3px
+        margin-right 9px
         padding 0 4px 0 7px
         cursor pointer
         .close
