--- a/app/styles/schedules/editor.styl
+++ b/app/styles/schedules/editor.styl
@@ -18,6 +18,34 @@ $info-nav-height ?= 35px
       text-align center
       font-size $font-size-medium
 
+  .add-btn-col
+    margin-top -46px
+
+  .preview
+    text-align center
+
+    .subject
+      margin 0 0 10px 0
+      padding 0
+      font-size $font-size-large
+      font-weight 500
+
+    .single
+      display block
+
+    .value
+      font-weight 300
+      color lighten($text-color, 40%)
+      .value-itm
+        color lighten($text-color, 20%)
+        font-size $font-size-medium
+        font-weight 500
+        text-decoration underline
+
+    .enter-line
+      margin-bottom 10px
+
+
   .editor-switcher
     margin-bottom 18px
     ul
