--- a/app/styles/common/switcher.styl
+++ b/app/styles/common/switcher.styl
@@ -5,11 +5,12 @@
   list-style-type none
   margin 0
   padding 0
+  overflow hidden
 
   li
     float left
     a
-      line-height 30px
+      line-height 36px
       padding 10px 10px
     &.current
       a
