--- a/app/styles/common/taggedInput.styl
+++ b/app/styles/common/taggedInput.styl
@@ -22,7 +22,7 @@
         margin-left -6px
         background $brand-success
         color #fff
-        line-height 23px
+        line-height 22px
         margin-right 9px
         padding 0 4px 0 7px
         cursor pointer
@@ -39,10 +39,11 @@
       &.input-li
         width 100%
         overflow hidden
+        height 22px
         input
           height 22px
           margin-top 1px
-          margin-bottom 1px
+          margin-bottom 5px
           -moz-box-sizing border-box
           -webkit-box-sizing border-box
           box-sizing border-box
