add filtering to professors

--- a/app/styles/professors/index.styl
+++ b/app/styles/professors/index.styl
@@ -3,7 +3,7 @@
 #professors-index
   margin-top: 30px
   .filter
-    margin-bottom 34px
+    /*margin-bottom 34px*/
     img
       width 60px
       margin 0 30px
@@ -18,10 +18,11 @@
       color: #373d3f
 
   .professors
+    margin-bottom 40px
     .professor
       color: #c0c2c1
       text-align center
-      margin-bottom 50px
+      margin-top: 50px
       img
         width 136px
         height 136px
@@ -34,7 +35,7 @@
 
       &:hover
         color: $brand-info
-        margin-bottom 33px
+        margin-top: 33px
         img
           border 5px solid $brand-info
           border-radius 76px
