add schedule header in professor page

--- a/app/styles/professors/show.styl
+++ b/app/styles/professors/show.styl
@@ -2,6 +2,7 @@
 
 #professors-show
   .professor
+    margin-bottom 20px
     .container
       position relative
     img
@@ -28,3 +29,6 @@
           td:first-child
             font-weight bold
             padding-right: 25px
+
+  /*.professor-schedule*/
+
