--- a/app/styles/schedules/editor.styl
+++ b/app/styles/schedules/editor.styl
@@ -9,10 +9,11 @@ $info-nav-height ?= 35px
   background $brand-info-bg
   margin-bottom 15px
   position relative
-  height 320px
+  min-height 320px
 
   .editor-row
     padding 0 15px
+    margin-bottom -15px
 
   textarea#descr
     height 138px
