--- a/app/styles/professors/index.styl
+++ b/app/styles/professors/index.styl
@@ -32,6 +32,7 @@
     @media $media-max-phone
       padding 0
     .professor
+      text-decoration none
       @media $media-min-tablet
         color: #c0c2c1
         text-align center
@@ -58,7 +59,7 @@
       @media $media-max-phone
         overflow hidden
         color: $brand-primary
-        border-bottom 1px solid $brand-info
+        border-bottom 1px solid #ebf1f5
         padding-top 8px
         padding-bottom 8px
         img
