hotfix mobile professor index

--- a/app/styles/professors/index.styl
+++ b/app/styles/professors/index.styl
@@ -32,6 +32,7 @@
     @media $media-max-phone
       padding 0
     .professor
+      display block
       text-decoration none
       @media $media-min-tablet
         color: #c0c2c1
