editor fixes and new modes

--- a/app/styles/common/layout.styl
+++ b/app/styles/common/layout.styl
@@ -14,3 +14,8 @@ a
 
 .rotate-180
   rotate(180deg)
+
+.stico-large
+  width 35px !important
+  height 35px !important
+  background-size 35px 35px !important
