editor done, created staff controls

--- a/app/styles/common/dateTimePicker.styl
+++ b/app/styles/common/dateTimePicker.styl
@@ -60,7 +60,7 @@
       &.current
         color #fff
         background $brand-info
-      &.after, &.before
+      &.disabled
         cursor default
         opacity 0.5
         color $text-color
