--- a/app/styles/schedules/editor.styl
+++ b/app/styles/schedules/editor.styl
@@ -16,7 +16,7 @@ $info-nav-height ?= 40px
     margin-bottom -15px
 
   textarea#descr
-    height 60px
+    height 100px
     resize none
 
   .select-cell
@@ -36,6 +36,8 @@ $info-nav-height ?= 40px
       margin-bottom 25px
 
   .preview
+    margin-bottom 30px
+
     .enter
       color lighten($text-color, 50%)
       font-size $font-size-medium
@@ -107,7 +109,7 @@ $info-nav-height ?= 40px
       p
         margin 30px 0
 
-      .notify
+      .notify-btn
         background $brand-primary
         color #fff
         padding 10px 20px
