--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -8,7 +8,28 @@
     white-space nowrap
     padding-bottom 10px
 
+    .heart-btn
+      cursor pointer
+      position absolute
+      left -48px
+      line-height $sched-nav-height
+      top 0
+      text-align center
+      span
+        left -23px
+        position absolute
+        bottom -10px
+        font-size $font-size-small
+        line-height $line-height-computed
+        padding 3px 7px
+        font-weight 700
+        border-radius 5px
+        color lighten($text-color, 50%)
+
+
     .editor-btn
+      cursor pointer
+      display none
       position absolute
       left -48px
       line-height $sched-nav-height
