--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -1,7 +1,34 @@
 @import "../_variables"
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
+
 .group-sched
+  .no-staff
+    background $brand-info-bg
+    text-align center
+    padding 20px
+    margin 0 0 14px 0
+    button
+      margin 10px
+
+  .group-star
+    padding 40px 0 20px 0
+    h4
+      display inline
+      margin-right 10px
+    .main-staff, .supp-staff
+      vertical-align middle
+      display inline-block
+      border 1px solid #ddd
+      background #eee
+      margin-right 5px
+      width 40px
+      height 40px
+    .supp-staff
+      opacity 0.5
+    .btn
+      margin-left 5px
+
   .week-even
     .parity-1
       opacity 0.2
