--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -90,7 +90,7 @@ $caret-width-large ?=              5px;
 
 // Footer
 // -------------------------
-$footer-height ?=             100px;
+$footer-height ?=             200px;
 $footer-bg ?=                 $brand-primary
 $footer-color ?=              lighten($footer-bg, 50%)
 $footer-link-color ?=         lighten($footer-bg, 50%)
@@ -212,19 +212,19 @@ $zindex-modal ?=             1050;
 // --------------------------------------------------
 
 // Extra small screen / phone
-$screen-xs ?=                  480px;
+$screen-xs ?=                  580px;
 $screen-phone ?=               $screen-xs;
 
 // Small screen / tablet
-$screen-sm ?=                  768px;
+$screen-sm ?=                  868px;
 $screen-tablet ?=              $screen-sm;
 
 // Medium screen / desktop
-$screen-md ?=                  992px;
+$screen-md ?=                  1092px;
 $screen-desktop ?=             $screen-md;
 
 // Large screen / wide desktop
-$screen-lg ?=                  1200px;
+$screen-lg ?=                  1300px;
 $screen-lg-desktop ?=          $screen-lg;
 
 // So media queries don't overlap when required, provide a maximum
@@ -584,10 +584,10 @@ $component-offset-horizontal ?= 180px;
 // --------------------------------------------------
 
 // Small screen / tablet
-$container-tablet ?=            ((720px + $grid-gutter-width) - 40);
+$container-tablet ?=            ((720px + $grid-gutter-width));
 
 // Medium screen / desktop
-$container-desktop ?=           ((940px + $grid-gutter-width) - 40);
+$container-desktop ?=           ((940px + $grid-gutter-width));
 
 // Large screen / wide desktop
 // $container-lg-desktop ?=        ((1140px + $grid-gutter-width));*/
