--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -7,7 +7,7 @@
     background $brand-info-bg
     text-align center
     padding 20px
-    margin 0 0 14px 0
+    margin 10px 0
     button
       margin 10px
 
