fixed pulling footer to bottom

--- a/app/styles/common/footer.styl
+++ b/app/styles/common/footer.styl
@@ -2,10 +2,10 @@
 
 footer
   position absolute
-  //bottom -100%
+  bottom -$footer-height
   left 0
   right 0
-  //height $footer-height
+  height $footer-height
   background $footer-bg
   padding 38px 0
   //padding ceil(($footer-height / 2)  - ($font-size-base / 2) ) 0
