--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -92,6 +92,7 @@ header
     nav
       padding 0 !important
       .brand
+        display none
         margin-left 0
         span
           display none
@@ -102,7 +103,7 @@ header
       ul
         margin 0
         position absolute
-        left 57px
+        left 0
         right 0
         top 0
 
