added bottom logo

--- a/app/styles/common/footer.styl
+++ b/app/styles/common/footer.styl
@@ -19,6 +19,17 @@ footer
     &:hover
       color: $footer-link-hover-color
 
+  .st-clock
+    position absolute
+    bottom 0
+    left 50%
+    margin-left -150px
+    background-image: url("../images/st-clock.png");
+    background-size: 300px 174px;
+    width: 300px;
+    height: 174px;
+    opacity: 0.8
+
   .feedback
     color $brand-success
     border 2px solid $brand-success
