--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -29,8 +29,26 @@ header
           vertical-align middle
           margin-left 10px
 
+    .login-wrap
+      float right
+
+      &>span
+        position relative
+        display block
+        margin-left 5px
+        background #fff
+        padding ((($navbar-height - $line-height-computed)/2) - 2) 9px
+        border 2px solid lighten($brand-info, 70%)
+        color $brand-info
+        border-radius 10px 10px 10px 0
+        cursor pointer
+        &:hover
+          text-decoration underline
+          border 2px solid lighten($brand-info, 30%)
+
     .navbar
       float right
+
       ul
         float right
         overflow hidden
@@ -57,16 +75,6 @@ header
               color lighten($link-color, 20%)
             i
               display none
-
-          &.login-wrap > span
-              position relative
-              display block
-              background lighten($brand-warning, 15%)
-              padding (($navbar-height - $line-height-computed)/2) 9px
-              color #fff
-              cursor pointer
-              &:hover
-                text-decoration underline
 
           &.active
             a
