fixed footer, added initial welcom staff message

--- a/app/styles/common/footer.styl
+++ b/app/styles/common/footer.styl
@@ -2,7 +2,7 @@
 
 footer
   position absolute
-  bottom -$footer-height
+  bottom - $footer-height
   left 0
   right 0
   height $footer-height
@@ -36,6 +36,7 @@ footer
     padding 5px 10px
     border-radius 20px
     text-decoration none
+    //margin-left -12px
     &:hover
       border 2px solid $brand-warning
 
