--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -3,11 +3,12 @@
 
 
 .group-sched
-  .no-staff
+  .no-staff, .welcome-staff
     background $brand-info-bg
     text-align center
     padding 20px
     margin 10px 0
+
     button
       margin 10px
 
