--- a/app/styles/common/dropDown.styl
+++ b/app/styles/common/dropDown.styl
@@ -10,7 +10,7 @@
 
     ul
       border 2px solid lighten($brand-primary, 80%)
-      margin -10px 0 0 0
+      margin -3px 0 0 1px
       padding 5px 0 5px 0
       list-style-type none
       background #fff
