--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -9,18 +9,19 @@
     padding-bottom 10px
 
     .heart-btn
+      margin-top (($sched-nav-height - 30)/2)
+      float left
+      margin-left 15px
+      position relative
       cursor pointer
-      position absolute
-      left -48px
-      line-height $sched-nav-height
-      top 0
       text-align center
+      @media $media-max-phone
+        display none
       span
         left -23px
         position absolute
-        bottom -10px
+        bottom -15px
         font-size $font-size-small
-        line-height $line-height-computed
         padding 3px 7px
         font-weight 700
         border-radius 5px
@@ -28,54 +29,51 @@
 
 
     .editor-btn
+      margin-top (($sched-nav-height - 30)/2)
+      float left
+      margin-left 15px
+      position relative
       cursor pointer
-      display none
-      position absolute
-      left -48px
-      line-height $sched-nav-height
-      top 0
+      text-align center
 
     .back-groups-btn
       float left
-      a
-        display block
-        font-size $font-size-large
-        text-decoration none
-        cursor pointer
 
-        .stico-arrow-right
+      @media $media-min-tablet
+        margin-left -5px
+
+      a
+        display inline-block
+        cursor pointer
+        text-decoration none
+        line-height $sched-nav-height
+        height $sched-nav-height
+        font-size $font-size-large
+
+        .back-txt
           display none
 
-        .back-logo-square
-          display block
-          float left
-          @media $media-min-tablet
-            background $brand-info
-            padding 5px
-            line-height 0
+        .stico-arrow-right
+          position relative
+          vertical-align middle
+          z-index 10000
+          margin-top -3px
 
-        span
-          margin-left 10px
+        .group-txt
+          margin-left 5px
 
         @media $media-max-phone
           font-size $font-size-medium
-          line-height $sched-nav-height
-          padding 5px 20px 5px 10px
+          padding 5px 20px 5px 5px
 
-          .stico-arrow-right
+          .back-txt
             position relative
-            display block
-            float left
-            z-index 10000
-            margin-top 5px
-          .back-logo-square i
-            display none
-          .back-logo-square:after
-            position relative
-            content 'Группы'
+            z-index 1000000
+            display inline
             margin-left 5px
-            z-index 10000
-          span
+
+          .group-txt
+            top 5px
             color $text-color
             background #fff
             display block
@@ -85,14 +83,13 @@
             text-align center
             z-index 0
 
-
     .sched-type-switcher
       margin-left 15px
       @media $media-max-tablet
         font-size $font-size-medium
       @media $media-min-desktop
         border 1px solid lighten($brand-info, 80%)
-        border-radius $line-height-computed
+        border-radius $sched-nav-height
       @media $media-min-tablet
         float left
       @media $media-max-phone
@@ -108,8 +105,8 @@
         @media $media-max-tablet
           line-height $sched-nav-height
         @media $media-min-desktop
-          border-radius $line-height-computed
-          padding 7px 10px
+          border-radius $sched-nav-height
+          padding (($sched-nav-height - $line-height-computed)/2) 10px
         &.current
           background $brand-info
           color #fff
@@ -118,46 +115,45 @@
           @media $media-max-tablet
             display none
 
-.sched-nav
-  .sched-update-indicator
-    float left
-    font-size $font-size-medium
-    color #aaa
-    font-weight 100
-    position absolute
-    left 0
-    right 0
-    text-align center
-    z-index -1
-    line-height $sched-nav-height
+    .sched-update-indicator
+      float left
+      font-size $font-size-medium
+      color #aaa
+      font-weight 100
+      position absolute
+      left 0
+      right 0
+      text-align center
+      z-index -1
+      line-height $sched-nav-height
 
 
-  .sched-week-switcher
-    float right
-    font-size $font-size-medium
-    font-weight 200
+    .sched-week-switcher
+      float right
+      font-size $font-size-medium
+      font-weight 200
 
-    @media $media-max-phone
-      display none
+      @media $media-max-phone
+        display none
 
-    &.feature a
-      width 85px
-    a
-      display inline-block
-      cursor pointer
-      padding 5px 0
-      text-decoration none
-      height $sched-nav-height
-      span
+      &.feature a
+        width 85px
+      a
+        display inline-block
         cursor pointer
-      &:first-child
-        text-align left
-        &>span
-          margin-left 5px
-      &:last-child
-        text-align right
-        &>span
-          margin-right 5px
-    .stico-arrow-right
-      margin-top -2px
-      vertical-align middle
+        text-decoration none
+        line-height $sched-nav-height
+        height $sched-nav-height
+        span
+          cursor pointer
+        &:first-child
+          text-align left
+          &>span
+            margin-left 5px
+        &:last-child
+          text-align right
+          &>span
+            margin-right 5px
+      .stico-arrow-right
+        margin-top -3px
+        vertical-align middle
