--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -4,7 +4,8 @@
 
 .group-sched
   .no-staff, .welcome-staff
-    background $brand-info-bg
+    background-color $brand-info-bg
+    //background-image url(../images/ballons.png)
     text-align center
     padding 20px
     margin 10px 0
