--- a/app/styles/common/lightbox.styl
+++ b/app/styles/common/lightbox.styl
@@ -13,6 +13,9 @@
   z-index 1000000
   transition(all 0.2s ease-out)
 
+  @media $media-max-phone
+    display none
+
   .glow
     background-color $brand-primary
     position absolute
@@ -21,9 +24,34 @@
     right 0
     top 0
     bottom 0
+    cursor pointer
+
+    .close
+      position absolute
+      top 10px
+      right 25px
+      color #fff
+      cursor pointer
+      opacity 0.4
+      .text
+        display inline-block
+        font-size $font-size-medium
+        font-weight 300
+        vertical-align middle
+        margin-top 5px
+      .arrow
+        margin-left 10px
+        font-weight 700
+        font-size 35px
+        vertical-align middle
+
+    &:hover
+      .close
+        opacity 1
 
   .wrap
-    background-color #fff
+    z-index 1
+    background-color #fff !important
     padding 10px
     position absolute
     left 50%
@@ -35,3 +63,5 @@
   #lightbox
     visibility visible
     opacity 1
+
+
