--- a/app/styles/common/buttons.styl
+++ b/app/styles/common/buttons.styl
@@ -7,8 +7,8 @@ a.back-btn
   cursor pointer
   padding: 5px 0
 
-  @media $media-max-phone
-    display none
+  /*@media $media-max-phone*/
+  /*display none*/
 
   span
     margin-left 5px
