--- a/app/styles/common/lightbox.styl
+++ b/app/styles/common/lightbox.styl
@@ -2,15 +2,11 @@
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
 #lightbox
-  position fixed
-  left 0
-  right 0
-  top 0
-  bottom 0
+  position: relative
+  visibility: hidden
+  z-index: 10000000
+  display: block
   opacity 0
-  visibility hidden
-  overflow hidden
-  z-index 1000000
   transition(all 0.2s ease-out)
 
   @media $media-max-phone
@@ -18,48 +14,74 @@
 
   .glow
     background-color $brand-primary
-    position absolute
+    position fixed
     opacity 0.8
     left 0
     right 0
     top 0
     bottom 0
-    cursor pointer
 
-    .close
-      position absolute
-      top 10px
-      right 25px
-      color #fff
-      cursor pointer
-      opacity 0.4
-      .text
-        display inline-block
-        font-size $font-size-medium
-        font-weight 300
-        vertical-align middle
-        margin-top 5px
-      .arrow
-        margin-left 10px
-        font-weight 700
-        font-size 35px
-        vertical-align middle
+  &>.wrap
+    height 100%
+    overflow auto
+    position fixed
+    top 0
+    right 0
+    bottom 0
+    left 0
 
-    &:hover
-      .close
-        opacity 1
+    &>.wrap
+      height 100%
+      min-height 300px
+      min-width 300px
+      position relative
+      width 100%
 
-  .wrap
-    z-index 1
-    background-color #fff !important
-    padding 10px
-    position absolute
-    left 50%
-    top 50%
+      &>.close-wrap
+        cursor pointer
+        position absolute
+        top 0
+        right 0
+        bottom 0
+        left 0
+        translate3d(0,0,0)
+
+        &>.close
+          position absolute
+          top 0px
+          right 25px
+          color #fff
+          cursor pointer
+          opacity 0.4
+          z-index 100000
+          .text
+            display inline-block
+            font-size $font-size-medium
+            font-weight 300
+            vertical-align middle
+            margin-top 5px
+          .arrow
+            margin-left 10px
+            font-weight 700
+            font-size 35px
+            vertical-align middle
+
+        &:hover
+          .close
+            opacity 1
+
+      &>.lb-content
+        translate3d(0,0,0)
+        padding 10px
+        background-color #fff
+        position absolute
+        top 50%
+        left 50%
+        z-index 1000
+
+
 
 .lightbox-showed
-  overflow hidden
-
   #lightbox
     visibility visible
     opacity 1
