faculties makeup done

--- a/app/styles/common/buttons.styl
+++ b/app/styles/common/buttons.styl
@@ -1,6 +1,7 @@
 @import "../_variables"
 
 a.back-btn
+  white-space nowrap
   display inline-block
   font-size $font-size-medium
   font-weight 200
