--- a/app/styles/common/footer.styl
+++ b/app/styles/common/footer.styl
@@ -72,10 +72,16 @@ footer
         margin-left 0
       &.widget-twitter
         background $brand-warning
+        &:hover
+          background darken($brand-warning, 20%)
       &.widget-vk
         background $brand-success
+        &:hover
+          background darken($brand-success, 20%)
       &.widget-facebook
         background $brand-info
+        &:hover
+          background darken($brand-info, 20%)
 
   .navigation
     ul
