--- a/app/styles/unifaculties/unis.styl
+++ b/app/styles/unifaculties/unis.styl
@@ -1,6 +1,42 @@
 @import "../_variables"
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
+.unis
+  padding 10px 0 80px 0
+  .uni-item
+    display block
+    color #fff
+    text-decoration none
+    padding 15px
+    background-color $brand-success
+
+    h3, h4
+      margin 0
+      padding 0
+
+    .city
+       font-size $font-size-base
+       font-weight 300
+       margin-left 10px
+
+    .name
+      font-weight 400
+
+    h4
+      font-size $font-size-base
+      font-weight 300
+      padding 5px 0 0 0
+
+    &:hover
+      background-color darken($brand-success, 10%)
+      .name
+        text-decoration underline
+
+    @media $media-max-phone
+      margin 0 0 10px 0
+    @media $media-min-tablet
+      margin 0 0 30px 0
+
 .home
   h3
     font-size $font-size-large*1.2
@@ -23,36 +59,6 @@
       color: $brand-primary
       &:focus
         outline none
-
-  .unis
-    padding 10px 0 80px 0
-    .uni-item
-      display block
-      color #fff
-      text-decoration none
-      padding 15px
-      background-color $brand-success
-
-      h3, h4
-        margin 0
-        padding 0
-
-      .city
-         font-size $font-size-base
-         font-weight 300
-         margin-left 10px
-
-      .name
-        font-weight 400
-
-      h4
-        font-size $font-size-base
-        font-weight 300
-        padding 5px 0 0 0
-
-      @media $media-max-phone
-        margin 0 0 10px 0
-
 
   .other-features-row
     margin-top 40px
