fixed login navigation

--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -96,17 +96,38 @@ header
 @media $media-max-phone
   header
     padding-top 0
+    margin-bottom 5px
 
     nav
       padding 0 !important
+
+      .row
+        margin 0
+        padding 0
+
       .brand
         display none
         margin-left 0
         span
           display none
         i
-          margin-left 21px
+          margin-left 5px
           margin-top 2px
+
+      &.only-index
+        .brand
+          display block
+          span
+            display inline
+
+        .login-wrap
+          margin-top 2px
+          display block
+          &>span
+            margin-right 2px
+
+        ul
+          display none
 
       ul
         margin 0
