--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -41,8 +41,7 @@
   .cell-atom
     display block
     position absolute
-    border-left 1px solid $sched-border-color
-    border-right 1px solid $sched-border-color
+    box-shadow(0 0 0 1px $sched-border-color)
     padding 0 12px
     overflow hidden
     white-space nowrap
@@ -63,28 +62,36 @@
       line-height ($sched-data-height/2)
       font-size $font-size-base
       top 0
-      bottom (($sched-data-height/2) - 1)
-      border-bottom 1px solid $sched-border-color
+      bottom (($sched-data-height/2))
       z-index 10
     &.parity-2
       line-height ($sched-data-height/2)
       font-size $font-size-base
-      top (($sched-data-height/2) - 1)
+      top (($sched-data-height/2))
       bottom 0
-      border-top 1px solid $sched-border-color
       z-index 10
     &.hg-0
-      left -2px
-      right -2px
+      left 0px
+      right 0px
     &.hg-1
       background #fff
-      left -2px
-      right 50%
+      left 0px
+      @media $media-min-tablet
+        right 115px
+      @media $media-min-desktop
+        right 150px
+      @media $media-max-phone
+        right 50%
       z-index 10
     &.hg-2
       background #fff
-      right -2px
-      left 50%
+      right 0px
+      @media $media-min-tablet
+        left 115px
+      @media $media-min-desktop
+        left 150px
+      @media $media-max-phone
+        left 50%
       z-index 10
 
     &:hover
