added login lightbox

--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -10,7 +10,8 @@
 form
   .form-group
     margin-top 3px
-  label
+
+  label.sr-only
     color lighten($text-color, 40%)
     position: absolute;
     margin: -16px 1px;
