--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -5,7 +5,7 @@
 .group-sched
   .no-staff, .welcome-staff
     background-color $brand-info-bg
-    //background-image url(../images/ballons.png)
+    background-image url(../images/ballons.png)
     text-align center
     padding 20px
     margin 10px 0
