added uni loading indicator

--- a/app/styles/unifaculties/unis.styl
+++ b/app/styles/unifaculties/unis.styl
@@ -59,6 +59,15 @@
       color: $brand-primary
       &:focus
         outline none
+    .form-group
+      position relative
+      .loading
+        position absolute
+        right 35px
+        bottom 15px
+        font-size $font-size-medium
+        color lighten($text-color, 50%)
+
 
   .other-features-row
     margin-top 40px
