added "find more!" row in index

--- a/app/styles/unifaculties/unis.styl
+++ b/app/styles/unifaculties/unis.styl
@@ -2,7 +2,7 @@
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
 .unis
-  padding 10px 0 80px 0
+  padding 10px 0 0 0
   .uni-item
     display block
     color #fff
@@ -38,12 +38,24 @@
       margin 0 0 30px 0
 
 .home
+  padding 0 0 80px 0
+
   h3
     font-size $font-size-large*1.2
   p
     color lighten($text-color, 40%)
     font-size $font-size-medium
     font-weight 300
+
+
+  .find-more-row
+    text-align center
+    p
+      font-size $font-size-large
+      padding 0
+      margin 0
+    a
+      font-size $font-size-large
 
 
   .search-bar
