main faculty tasks complete

--- a/app/styles/common/mobileTitle.styl
+++ b/app/styles/common/mobileTitle.styl
@@ -3,16 +3,21 @@
 .mobile-title
   @media $media-max-phone
     display block
+    margin 0
+    padding 0
+
 
   display none
   overflow hidden
   margin 10px 20px
   .back-btn
-    float left
+    position absolute
+    padding 5px 15px 9px 5px
+    background rgba(255,255,255,0.7)
+
   .title
     line-height 37px
     font-size 18px
     text-align center
-    margin-right 50px
     font-weight 500
 
