--- a/app/styles/common/photo.styl
+++ b/app/styles/common/photo.styl
@@ -1,6 +1,13 @@
 @import "../_variables"
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
+.small-photo
+  width 40px
+  height 40px
+  background #eee
+  display inline-block
+  margin 3px
+
 .photo-wrap
   opacity 0
   display inline-block
