--- a/app/styles/common/lightbox.styl
+++ b/app/styles/common/lightbox.styl
@@ -11,8 +11,6 @@
   &.enable-animation
     transition(all 0.2s ease-out)
 
-  @media $media-max-phone
-    display none
 
   .glow
     background-color $brand-primary
@@ -22,15 +20,17 @@
     right 0
     top 0
     bottom 0
+    @media $media-max-phone
+      display none
 
   &>.wrap
-    height 100%
     overflow auto
     position fixed
-    top 0
     right 0
     bottom 0
     left 0
+    height 100%
+    top 0
 
     &>.wrap
       height 100%
@@ -42,20 +42,32 @@
       &>.close-wrap
         cursor pointer
         position absolute
-        top 0
-        right 0
-        bottom 0
-        left 0
         translate3d(0,0,0)
+        @media $media-min-tablet
+          top 0
+          right 0
+          bottom 0
+          left 0
+        @media $media-max-phone
+          z-index 10000
+          right 0
+          top 0
 
         &>.close
           position absolute
-          top 0px
-          right 25px
-          color #fff
           cursor pointer
           opacity 0.4
           z-index 100000
+          @media $media-min-tablet
+            color #fff
+            right 25px
+            top 0px
+          @media $media-max-phone
+            color $link-color
+            width 110px
+            right 0
+            top -10px
+
           .text
             display inline-block
             font-size $font-size-medium
@@ -77,9 +89,14 @@
         padding 20px
         background-color #fff
         position absolute
-        top 50%
-        left 50%
         z-index 1000
+        @media $media-min-tablet
+          top 50%
+          left 50%
+        @media $media-max-phone
+          margin 0 !important
+          width 100%
+          height 100%
 
 
 
