--- a/app/styles/unifaculties/faculties.styl
+++ b/app/styles/unifaculties/faculties.styl
@@ -8,7 +8,7 @@
     z-index 1000
     top 0
     left 0
-    padding 10px 20px 10px 10px
+    padding 5px 20px 5px 5px
 
   .uni-img
     padding 0
@@ -32,7 +32,10 @@
 
   .uni-info
     position relative
-    padding 0 0 20px 0
+    @media $media-min-tablet
+      padding 0 0 20px 0
+    @media $media-max-phone
+      padding 0 0 5px 0
 
     .info
       padding 30px
