makeup of no-groups

--- a/app/styles/common/lightbox.styl
+++ b/app/styles/common/lightbox.styl
@@ -11,6 +11,9 @@
   &.enable-animation
     transition(all 0.2s ease-out)
 
+  .container
+    @media $media-min-tablet
+      width $screen-tablet
 
   .glow
     background-color $brand-primary
