invite lightbox started

--- a/app/styles/common/layout.styl
+++ b/app/styles/common/layout.styl
@@ -28,3 +28,9 @@ a
 
 .fade
   display none
+
+.loading
+  display block
+  font-size $font-size-large
+  padding 0 0 40px 0
+  color lighten($text-color, 50%)
