--- a/app/styles/common/lightbox.styl
+++ b/app/styles/common/lightbox.styl
@@ -12,8 +12,9 @@
     transition(all 0.2s ease-out)
 
   .container
+    padding 0
     @media $media-min-tablet
-      width $screen-tablet
+      width 640px
 
   .glow
     background-color $brand-primary
