--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -23,31 +23,6 @@
             color lighten($text-color, 30%)
             padding 0 15px 10px 15px
 
-      @media $media-max-phone
-        .posible-things
-          padding 0 0
-          img
-            display block
-            float left
-            width 50px
-            margin 20px 10px 10px 0
-          p
-            padding 0 0 10px 0
-          h3
-            margin 0
-            padding 20px 0
-            border-top 1px solid darken($brand-info-bg, 10%)
-          .row > div:first-child
-            h3
-              border-top none
-
-
-    .loading
-      display block
-      font-size $font-size-large
-      padding 0 0 40px 0
-      color lighten($text-color, 50%)
-
     .admins
       padding 20px 0 0 0
       position absolute
@@ -144,11 +119,11 @@
 
       .posible-things
         padding 0 0 100px 0
-        img
+        i
           display block
           float left
-          width 50px
-          margin 20px 10px 10px 0
+          width 70px
+          margin 20px 0px 5px 0
         p
           color lighten($text-color, 30%)
           padding 0 0 10px 0
