--- a/app/styles/icons/upload.styl
+++ b/app/styles/icons/upload.styl
@@ -1,6 +1,6 @@
-.stico-invite
+.stico-upload
   display inline-block
-  background-image url(../images/invite.png)
+  background-image url(../images/upload.png)
   background-size 60px 60px
   background-repeat no-repeat
   width 60px
