--- a/app/styles/icons/admin.styl
+++ b/app/styles/icons/admin.styl
@@ -1,6 +1,6 @@
-.stico-invite
+.stico-admin
   display inline-block
-  background-image url(../images/invite.png)
+  background-image url(../images/admin.png)
   background-size 60px 60px
   background-repeat no-repeat
   width 60px
