add professors photo and cache

--- a/app/styles/professors/index.styl
+++ b/app/styles/professors/index.styl
@@ -36,11 +36,12 @@
         color: #c0c2c1
         text-align center
         margin-top: 50px
-        img
-          width 136px
-          height 136px
-          border-radius 68px
-          margin-bottom 15px
+        .photo-wrap
+          img
+            width 136px
+            height 136px
+            border-radius 68px
+            margin-bottom 15px
         .second-name
           font-size 18px
         .first-name
@@ -61,11 +62,12 @@
         border-bottom 1px solid #ebf1f5
         padding-top 8px
         padding-bottom 8px
+        .photo-wrap
+          float left
         img
           width 68px
           height 68px
           border-radius 34px
-          float left
           margin-right 14px
         .name
           margin-top: 20px
