--- a/app/styles/professors/show.styl
+++ b/app/styles/professors/show.styl
@@ -30,10 +30,11 @@
             padding-right: 25px
 
     @media $media-max-phone
-      img
+      .photo-wrap
         top 0
-        width: 54px
-        height: 54px
+        img
+          width: 54px
+          height: 54px
       .full-name-wrap
         font-size 18px
         background none
