places shedule: add details, bottom-margin, navigation fix

--- a/app/styles/common/schedule/schedule.styl
+++ b/app/styles/common/schedule/schedule.styl
@@ -2,6 +2,10 @@
 
 
 .schedule
+  .cell-details
+    background $brand-info
+    padding 20px
+
   .cell-atom
     display block
     position absolute
