--- a/app/styles/places/index.styl
+++ b/app/styles/places/index.styl
@@ -1,19 +1,34 @@
 @import '../_variables'
 
 #places-index
+  margin-bottom 40px
   .places-filter
+    float left
     ul
       margin 0
       padding 0
+      @media $media-max-phone
+        margin-top 20px
       li
         display inline-block
         margin-right 1px
+        margin-bottom 1px
         &.active
           background $brand-info
           color #fff
         input
           display none
         label
+          cursor pointer
           padding 10px 15px
           font-weight 400
           margin 0
+
+  .cell-details
+    .places
+      span
+        display inline-block
+        margin-right 15px
+        color #ffffff
+        font-size $font-size-medium
+
