bug fixed, doing details

--- a/app/styles/common/schedule/schedule.styl
+++ b/app/styles/common/schedule/schedule.styl
@@ -2,9 +2,8 @@
 
 
 .schedule
-  .cell-details
-    background $brand-info
-    padding 20px
+  .sched-details
+    background $brand-info-bg
 
   .cell-atom
     display block
