--- a/app/styles/professors/show.styl
+++ b/app/styles/professors/show.styl
@@ -5,12 +5,13 @@
     margin-bottom 20px
     .container
       position relative
-    img
+    .photo-wrap
       position absolute
       top 25px
-      width 187px
-      height 187px
-      border-radius 94px
+      img
+        width 187px
+        height 187px
+        border-radius 94px
     .full-name-wrap
       font-size 24px
       background #d5e2ea
